# filter-huggingface-vision

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.model  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  constraints-cuda.txt  docker-compose.yaml  models.toml.example  prepare_models.py  pyproject.toml  templatize
.github/: pull_request_template.md
.github/workflows/: ci.yaml  create-release.yaml  dismiss-stale-approvals.yaml  security-scan.yaml
build-include/: README.md  filter.mk
docs/: _PUBLISHING_PATH  _category_.json  class-name-remapping.md  embedding-gcs.md  implementation-plan.md  object-detection.md  overview.md  plan-cuda12-pinning.md  rt-detr-implementation-plan.md  supported-models.md
filter_huggingface_vision/: filter.py  utils.py
filter_huggingface_vision/backends/: __init__.py  _hf_load_errors.py  base.py  embedding.py  grounding_dino.py  image_classification.py  object_detection.py  owlvit.py
scripts/: generate_exemplars.py  grounding_dino.py  image_classification.py  object_detection.py  object_detection_pipeline.py  weapon_label_remap.py  zero_shot_object_detection.py  zero_shot_object_detection_pipeline.py
tests/: _hf_test_utils.py  test_embedding.py  test_filter_config.py  test_filter_huggingface_vision.py  test_grounding_dino.py  test_image_classification.py  test_label_remap.py  test_object_detection.py  test_owlvit.py  test_roi_cascade.py  test_roi_format.py  test_silent_failures.py  test_utils.py  test_{{REPO_NAME_SNAKECASE}}.py
{{REPO_NAME_SNAKECASE}}/: filter.py
(+3 files in other folders)
