[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["filter_huggingface_vision*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
name = "filter_huggingface_vision"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "openfilter[all]>=0.1.30",
  "transformers>=4.40.0",
  "torch>=2.9.1",
  "timm",
  "sentencepiece",
  "pillow",
  "huggingface-hub",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "build==1.4.0",
  "setuptools==80.10.1",
  "twine==6.2.0",
  "wheel==0.46.2",
  "black==26.3.1",
  "isort==7.0.0",
  "flake8==7.3.0",
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
]

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
profile = "black"

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"
explicit = true
